--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/virajchitnis/Podcaster/issues"
   },
-  "homepage": "https://github.com/virajchitnis/Podcaster#readme"
+  "homepage": "https://github.com/virajchitnis/Podcaster#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "podcast": "^1.3.0",
+    "xml": "^1.0.1"
+  }
 }
