Ability to read episode details from a yaml file

--- a/examples/var/podcaster/podcasts/example_podcast.yaml
+++ b/examples/var/podcaster/podcasts/example_podcast.yaml
@@ -6,7 +6,7 @@ podcast:
     #====================
 
     # This is the name used for the URL eg. /{shortname}/feed.xml
-    shortname: "test"
+    shortname: "example_podcast"
 
     # XML tag: <title>
     title: "Test Podcast"
