Automatically create album art urls and updated the readme

--- a/examples/var/podcaster/episodes/example_podcast/s01e01.yaml
+++ b/examples/var/podcaster/episodes/example_podcast/s01e01.yaml
@@ -58,4 +58,4 @@ episode:
     # XML tag: <itunes:image>
     itunes_image:
         -
-            href: "https://www.domain.tld/podcast/s01e01/albumart.jpeg"
+            href: "/media/images/example_podcast.jpeg"
